bug 195495: [Viewers] Add option to do nothing on reaching the end

--- a/bundles/org.eclipse.compare/plugins/org.eclipse.compare/compare/org/eclipse/compare/internal/CompareMessages.properties
+++ b/bundles/org.eclipse.compare/plugins/org.eclipse.compare/compare/org/eclipse/compare/internal/CompareMessages.properties
@@ -70,6 +70,7 @@ TextMergeViewer_13=The element being edited is read-only
 TextMergeViewer_14=Element is Read Only
 TextMergeViewer_15=The element being edited is read-only
 TextMergeViewer_16=Show &Line Numbers
+TextMergeViewer_17=Do nothing
 TextMergeViewer_atEnd_message= End of document reached. Continue from beginning?
 
 TextMergeViewer_atBeginning_title= Go to Previous Difference
@@ -81,9 +82,10 @@ CompareNavigator_atEnd_title= End Reached
 CompareDialog_commit_button=C&ommit
 CompareDialog_error_title=Error Saving Changes
 ComparePreferencePage_0=When the end/beginning is reached while navigating an element
-ComparePreferencePage_1=Prompt
-ComparePreferencePage_2=Loop back to the beginning/end
-ComparePreferencePage_3=Go to the next/previous element
+ComparePreferencePage_1=Pro&mpt
+ComparePreferencePage_2=&Loop back to the beginning/end
+ComparePreferencePage_3=Go to the ne&xt/previous element
+ComparePreferencePage_4=D&o nothing
 CompareDialog_error_message=The changes were not saved: {0}
 CompareNavigator_atEnd_message= You have reached the last difference.
 
