Bug 199288: Expressions view should support paste https://bugs.eclipse.org/bugs/show_bug.cgi?id=199288

--- a/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/actions/ActionMessages.properties
+++ b/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/actions/ActionMessages.properties
@@ -185,6 +185,7 @@ SuspendAction_3=Suspend
 ConfigureColumnsAction_0=Select &Columns...
 ConfigureColumnsAction_1=Select the &columns to display:
 ConfigureColumnsAction_2=Select Columns
+PasteWatchExpressionsAction_0=&Paste
 ProfileLastAction_0=Profi&le Last Launched
 ProfileLastAction_1=Profi&le
 ProfileLastAction_2=Profile the selected resource or active editor
