"Compare with Other Resource" dialog messages clean-up

--- a/bundles/org.eclipse.compare/plugins/org.eclipse.compare/compare/org/eclipse/compare/internal/CompareMessages.properties
+++ b/bundles/org.eclipse.compare/plugins/org.eclipse.compare/compare/org/eclipse/compare/internal/CompareMessages.properties
@@ -122,27 +122,23 @@ SelectAncestorDialog_message=Which resource would you like to use as the common 
 SelectAncestorDialog_option=''{0}''
 ShowWhitespaceAction_0=Show &Whitespace Characters
 
-CompareWithOther_fileLabel=File:
-CompareWithOther_ancestor=Ancestor
-CompareWithOther_rightPanel=Right
-CompareWithOther_leftPanel=Left
-CompareWithOther_dialogTitle=Compare with Other Resource
-CompareWithOther_dialogMessage=Select resources to compare
-CompareWithOther_error_not_comparable=Selected resources are not comparable.
-CompareWithOther_error_empty=Both left and right panel must contain a valid path.
-CompareWithOther_clear=Clear
-CompareWithOther_info=Drag files from a view or between dialog's fields.
-CompareWithOther_externalFileButton=External file...
-CompareWithOther_externalFolderBUtton=External folder...
-CompareWithOther_externalFile_errorTitle=Compare With Other Resource Error
-CompareWithOther_externalFile_errorMessage=Cannot create a link to an external resource.
-CompareWithOther_pathLabel=Path:
+CompareWithOtherResourceDialog_ancestor=Ancestor
+CompareWithOtherResourceDialog_rightPanel=Right
+CompareWithOtherResourceDialog_leftPanel=Left
+CompareWithOtherResourceDialog_dialogTitle=Compare with Other Resource
+CompareWithOtherResourceDialog_dialogMessage=Select resources to compare
+CompareWithOtherResourceDialog_error_not_comparable=Selected resources are not comparable.
+CompareWithOtherResourceDialog_error_empty=Both left and right panel must contain a valid path.
+CompareWithOtherResourceDialog_clear=&Clear
+CompareWithOtherResourceDialog_info=Drag files from a view or between dialog's fields.
+CompareWithOtherResourceDialog_externalFile_errorTitle=Compare With Other Resource Error
+CompareWithOtherResourceDialog_externalFile_errorMessage=Cannot create a link to an external resource.
 CompareWithOtherResourceDialog_externalFileMainButton=Browse...
-CompareWithOtherResourceDialog_externalFileRadioButton=External file
+CompareWithOtherResourceDialog_externalFileRadioButton=&External file
 CompareWithOtherResourceDialog_externalFolderMainButton=Browse...
 CompareWithOtherResourceDialog_externalFolderRadioButton=External folder
-CompareWithOtherResourceDialog_workspaceMainButton=Browse...
-CompareWithOtherResourceDialog_workspaceRadioButton=Workspace
+CompareWithOtherResourceDialog_workspaceMainButton=&Browse...
+CompareWithOtherResourceDialog_workspaceRadioButton=&Workspace
 
 CompareContentViewerSwitchingPane_defaultViewer=Default
 CompareContentViewerSwitchingPane_switchButtonTooltip=Switch
