--- a/org.eclipse.ui.intro.universal/themes/slate/swt/migrate.properties
+++ b/org.eclipse.ui.intro.universal/themes/slate/swt/migrate.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2006 IBM Corporation and others.
+# Copyright (c) 2005, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -8,14 +8,11 @@
 # Contributors:
 #     IBM Corporation - initial API and implementation
 ###############################################################################
+migrate.page-content.layout.vspacing = 40 
+migrate.page-content.layout.ncolumns = 2
+migrate.page-content.page-title.layout.colspan = 2
+migrate.page-content.page-description.layout.colspan = 2
+migrate.page-content.content-divider.layout.colspan = 2
 
-# ==============================================
-# Universal Welcome plugin.xml properties file
-# ==============================================
-
-plugin_name = Universal Welcome
-provider_name = Eclipse.org
-
-theme.name.circles = Circles
-theme.name.purpleMesh = Purple Mesh (Classic Eclipse)
-theme.name.slate = Slate
+migrate.subtitle-id = migrate/page-content/page-title
+migrate.description-id = migrate/page-content/page-description
