--- a/org.eclipse.ui.intro.universal/themes/slate/swt/webresources.properties
+++ b/org.eclipse.ui.intro.universal/themes/slate/swt/webresources.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2006 IBM Corporation and others.
+# Copyright (c) 2005, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -9,13 +9,11 @@
 #     IBM Corporation - initial API and implementation
 ###############################################################################
 
-# ==============================================
-# Universal Welcome plugin.xml properties file
-# ==============================================
+webresources.page-content.layout.vspacing = 40 
+webresources.page-content.layout.ncolumns = 2
+webresources.page-content.page-title.layout.colspan = 2
+webresources.page-content.page-description.layout.colspan = 2
+webresources.page-content.content-divider.layout.colspan = 2
 
-plugin_name = Universal Welcome
-provider_name = Eclipse.org
-
-theme.name.circles = Circles
-theme.name.purpleMesh = Purple Mesh (Classic Eclipse)
-theme.name.slate = Slate
+webresources.subtitle-id = webresources/page-content/page-title
+webresources.description-id = webresources/page-content/page-description
