--- a/ant/org.eclipse.ant.ui/Ant Tools Support/org/eclipse/ant/internal/ui/datatransfer/DataTransferMessages.properties
+++ b/ant/org.eclipse.ant.ui/Ant Tools Support/org/eclipse/ant/internal/ui/datatransfer/DataTransferMessages.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2004, 2007 IBM Corporation and others.
+# Copyright (c) 2004, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -27,11 +27,8 @@ AntBuildfileExportPage_2=Select the projects to use to &generate the Ant buildfi
 AntBuildfileExportPage_20=JUnit output directory name is required.
 AntBuildfileExportPage_3=Overwrite existing buildfiles for following projects:
 AntBuildfileExportPage_4=Confirm Overwrite
-AntBuildfileExportPage_5=Buildfiles created for following projects: {0}
 AntBuildfileExportPage_6=A cycle was detected in the build path of project: {0}
-AntBuildfileExportPage_7=Created Ant buildfiles might not compile correctly. Please fix all build path errors.
-AntBuildfileExportPage_8=Then try again.
-AntBuildfileExportPage_9=Cycle detected
+AntBuildfileExportPage_creating_build_files=Creating Ant build files...
 AntNewJavaProjectPage_9=Create a Java Project from an Ant Buildfile
 AntNewJavaProjectPage_0=Specified buildfile does not exist
 AntNewJavaProjectPage_10=Create a new Java project based on the specification of a javac task in the Ant buildfile. This does not copy the source contents to the workspace.
@@ -51,6 +48,7 @@ AntNewJavaProjectPage_23=Project name is not a valid: {0}
 AntNewJavaProjectPage_24=&Link to the buildfile in the file system
 AntNewJavaProjectPage_2=The file selected is not a valid Ant buildfile
 AntNewJavaProjectPage_3=&Select javac declaration to use to define project:
+BuildFileCreator_generating_buildfile_for=Generating build file for {0}...
 JavacTableLabelProvider_0=\"javac\" task found in target \"{0}\"
 ProjectCreator_0=Problem setting the classpath of the project from the javac classpath: {0}
 SourceAnalyzer_0=There is a build cycle in the source directories of project \"{0}\". Exported Ant buildfile will not compile your sources correctly until you eliminate the cycle: 
