--- a/org.eclipse.search/search/org/eclipse/search/internal/ui/SearchMessages.properties
+++ b/org.eclipse.search/search/org/eclipse/search/internal/ui/SearchMessages.properties
@@ -94,7 +94,7 @@ TextSearchVisitor_scanning= Scanning file {1} of {2}: {0}
 TextSearchVisitor_error= File ''{1}'' has been skipped, problem while reading: (''{0}'').
 TextSearchVisitor_canceled= Operation Canceled
 TextSearchVisitor_unsupportedcharset=File ''{1}'' has been skipped: Unsupported encoding ''{0}''.
-TextSearchVisitor_patterntoocomplex0=Search pattern is too complex. Search cancelled.
+TextSearchVisitor_patterntoocomplex0=Search pattern is too complex. Search canceled.
 TextSearchVisitor_progress_updating_job=Search progress polling
 TextSearchVisitor_filesearch_task_label=Searching for files...
 TextSearchVisitor_textsearch_task_label=Searching for pattern ''{0}''...
