bug 268189: UI polish for compare viewer switcher

--- a/bundles/org.eclipse.compare/plugins/org.eclipse.compare/compare/org/eclipse/compare/internal/CompareMessages.properties
+++ b/bundles/org.eclipse.compare/plugins/org.eclipse.compare/compare/org/eclipse/compare/internal/CompareMessages.properties
@@ -140,7 +140,8 @@ CompareWithOtherResourceDialog_externalFolderRadioButton=External folder
 CompareWithOtherResourceDialog_workspaceMainButton=&Browse...
 CompareWithOtherResourceDialog_workspaceRadioButton=&Workspace
 
-CompareContentViewerSwitchingPane_defaultViewer=Default
-CompareContentViewerSwitchingPane_switchButtonTooltip=Switch
+CompareContentViewerSwitchingPane_defaultViewer=Default Compare
+CompareContentViewerSwitchingPane_switchButtonTooltip=Switch Compare Viewer
+CompareContentViewerSwitchingPane_discoveredLabel={0} Compare
 
 ReaderCreator_fileIsNotAccessible=Cannot create a reader because the file is inaccessible.
