--- a/bundles/org.eclipse.ui.navigator/build.properties
+++ b/bundles/org.eclipse.ui.navigator/build.properties
@@ -14,7 +14,8 @@ bin.includes = plugin.xml,\
                .,\
                META-INF/,\
                plugin.properties,\
-               about.html
+               about.html,\
+               .options
 output.. = bin/
 src.includes = about.html,\
                schema/
