Bug 269961 [launching] Confusing "Discard Changes?" dialog when trying to filter with pending changes

--- a/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/launchConfigurations/LaunchConfigurationsMessages.properties
+++ b/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/launchConfigurations/LaunchConfigurationsMessages.properties
@@ -73,6 +73,7 @@ LaunchConfigurationDialog_Exception_occurred_while_saving_launch_configuration_4
 LaunchConfigurationDialog_Launch_configuration_already_exists_with_this_name_12=A configuration with this name already exists
 LaunchConfigurationDialog_Launch_Configuration_Error_46=Launch Configuration Error
 LaunchConfigurationDialog_Launch_Configurations_18=Launch Configurations
+LaunchConfigurationFilteredTree_save_changes=Save Changes
 LaunchConfigurationFilteredTree_search_with_changes=You cannot perform a text search when the current configuration has pending changes.\n\nDo you want to save the changes and continue searching?
 LaunchConfigurationFilteredTree_search_with_errors=You cannot perform a text search when the current configuration has errors.\n\nDo you want to discard the changes and continue searching?
 LaunchConfigurationDialog_Name_required_for_launch_configuration_11=A name is required for the configuration
@@ -80,10 +81,9 @@ LaunchConfigurationDialog_No_33=No
 LaunchConfigurationEditDialog_0=Modify configuration and continue.
 LaunchConfigurationEditDialog_1=Con&tinue
 LaunchConfigurationDialog_Ready_to_launch_2=Ready to launch
-LaunchConfigurationDialog_Save_changes__31=Save changes?
 LaunchConfigurationDialog_The_configuration___29=The configuration "{0}" has unsaved changes.  Do you wish to save them?
 LaunchConfigurationDialog_The_configuration___35=The configuration "{0}" has unsaved changes that CANNOT be saved because of the following error:\n\n
-LaunchConfigurationFilteredTree_discard_changes=Discard Changes?
+LaunchConfigurationFilteredTree_discard_changes=Discard Changes
 LaunchConfigurationDialog_unspecified_28=unspecified
 LaunchConfigurationDialog_Yes_32=Yes
 LaunchConfigurationDialog_Do_you_wish_to_delete_the_selected_launch_configurations__1=Do you wish to delete the selected launch configurations?
