Fix for Bug 270883 UI Test failures on Cocoa

--- a/tests/org.eclipse.ui.tests/plugin.xml
+++ b/tests/org.eclipse.ui.tests/plugin.xml
@@ -4140,7 +4140,7 @@
          </key>
          <sequenceModifier
                find="M1+8"
-               platforms="cocoa"
+               platforms="photon"
                replace="M2+8">
          </sequenceModifier>
       </extension>
