bug 271434: Missing mnemonics in "End Reached" dialog when navigating changes

--- a/bundles/org.eclipse.compare/plugins/org.eclipse.compare/compare/org/eclipse/compare/internal/CompareMessages.properties
+++ b/bundles/org.eclipse.compare/plugins/org.eclipse.compare/compare/org/eclipse/compare/internal/CompareMessages.properties
@@ -55,12 +55,12 @@ TextMergeViewer_statusLine_format= Left: {0}, Right: {1}, {2}
 TextMergeViewer_atEnd_title= Go to Next Difference
 TextMergeViewer_0=End Reached
 TextMergeViewer_1=You have reached the end of the currently displayed element. What would you like to do?
-TextMergeViewer_2=Go to the beginning of this element
-TextMergeViewer_3=Display the next element
+TextMergeViewer_2=&Go to the beginning of this element
+TextMergeViewer_3=&Display the next element
 TextMergeViewer_4=Beginning Reached
 TextMergeViewer_5=You have reached the beginning of the currently displayed element. What would you like to do?
-TextMergeViewer_6=Go to the end of this element
-TextMergeViewer_7=Display the previous element
+TextMergeViewer_6=&Go to the end of this element
+TextMergeViewer_7=&Display the previous element
 TextMergeViewer_8=End Reached
 TextMergeViewer_9=You have reached the last difference. Would you like go to the beginning of this element?
 TextMergeViewer_10=Beginning Reached
@@ -70,7 +70,7 @@ TextMergeViewer_13=The element being edited is read-only
 TextMergeViewer_14=Element is Read Only
 TextMergeViewer_15=The element being edited is read-only
 TextMergeViewer_16=Show &Line Numbers
-TextMergeViewer_17=Do nothing
+TextMergeViewer_17=Do &nothing
 TextMergeViewer_atEnd_message= End of document reached. Continue from beginning?
 
 TextMergeViewer_atBeginning_title= Go to Previous Difference
@@ -83,9 +83,9 @@ CompareDialog_commit_button=C&ommit
 CompareDialog_error_title=Error Saving Changes
 ComparePreferencePage_0=When the end/beginning is reached while navigating an element
 ComparePreferencePage_1=Pro&mpt
-ComparePreferencePage_2=&Loop back to the beginning/end
-ComparePreferencePage_3=Go to the ne&xt/previous element
-ComparePreferencePage_4=D&o nothing
+ComparePreferencePage_2=G&o to the beginning/end of the element
+ComparePreferencePage_3=Disp&lay the next/previous element
+ComparePreferencePage_4=Do &nothing
 CompareDialog_error_message=The changes were not saved: {0}
 CompareNavigator_atEnd_message= You have reached the last difference.
 
