--- a/bundles/org.eclipse.compare/plugins/org.eclipse.compare/plugin.properties
+++ b/bundles/org.eclipse.compare/plugins/org.eclipse.compare/plugin.properties
@@ -125,11 +125,11 @@ ComparePreferencePage.filter.invalidsegment.error= Filter is invalid: {0}
 
 ComparePreferencePage.textCompareTab.label= &Text Compare
 
-ComparePreferencePage.initiallyShowAncestorPane.label= Initially show a&ncestor pane
+ComparePreferencePage.initiallyShowAncestorPane.label= &Initially show ancestor pane
 ComparePreferencePage.showPseudoConflicts.label= Show &pseudo conflicts
 ComparePreferencePage.synchronizeScrolling.label= Synchronize &scrolling between panes in compare viewers
 ComparePreferencePage.useSingleLine.label= Connect &ranges with single line
-ComparePreferencePage.highlightTokenChanges.label=Highlight &individual changes
+ComparePreferencePage.highlightTokenChanges.label=&Highlight individual changes
 
 ComparePreferencePage.preview.label= Previe&w:
 ComparePreferencePage.ancestor.label= Common Ancestor
