--- a/bundles/org.eclipse.compare/plugins/org.eclipse.compare.win32/plugin.properties
+++ b/bundles/org.eclipse.compare/plugins/org.eclipse.compare.win32/plugin.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2008 IBM Corporation and others.
+# Copyright (c) 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -9,7 +9,7 @@
 #     IBM Corporation - initial API and implementation
 ###############################################################################
 #
-# Resource strings for Compare Core Plug-in
+# Resource strings for Compare Win32 Plug-in
 #
-pluginName = Core Compare Support
+pluginName = Compare Support for Word
 providerName = Eclipse.org
