--- a/ant/org.eclipse.ant.ui/plugin.properties
+++ b/ant/org.eclipse.ant.ui/plugin.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2008 IBM Corporation and others.
+# Copyright (c) 2000, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -23,6 +23,8 @@ AntLaunchDelegate.name=Eclipse Ant Launcher
 AntLaunchDelegate.description=The Eclipse Ant Launcher supports running and debugging Ant build files.
 AntBuilderLaunchDelegate.name= Eclipse Ant Builder Launcher
 AntBuilderLaunchDelegate.description=The Eclipse Ant Builder Launcher supports running Ant build files.
+AntBuild...Shortcut.description=Launches an Ant build and allows it to be configured 
+AntBuildShortcut.description=Launches an Ant build with default settings
 
 AntEditor.name=Ant Editor
 AddBookmark.label=Add Boo&kmark...
