--- a/ant/org.eclipse.ant.ui/plugin.xml
+++ b/ant/org.eclipse.ant.ui/plugin.xml
@@ -461,13 +461,14 @@ M4 = Platform-specific fourth key -->
    <extension
          point="org.eclipse.debug.ui.launchShortcuts">
       <shortcut
-            label="%AntLaunchShortcut.label"
-            icon="$nl$/icons/full/obj16/ant.gif"
             category="org.eclipse.ui.externaltools"
-            helpContextId="org.eclipse.ui.externaltools.launchShortcutHelpContext.antShortcut"
             class="org.eclipse.ant.internal.ui.launchConfigurations.AntLaunchShortcut"
-            modes="run, debug"
-            id="org.eclipse.ant.ui.antShortcut">
+            description="%AntBuildShortcut.description"
+            helpContextId="org.eclipse.ui.externaltools.launchShortcutHelpContext.antShortcut"
+            icon="$nl$/icons/full/obj16/ant.gif"
+            id="org.eclipse.ant.ui.antShortcut"
+            label="%AntLaunchShortcut.label"
+            modes="run, debug">
         <contextualLaunch>
            <enablement>
              <with variable="selection">
@@ -492,13 +493,14 @@ M4 = Platform-specific fourth key -->
         </configurationType>
       </shortcut>
       <shortcut
-            label="%AntLaunchShortcutWithDialog.label"
-            icon="$nl$/icons/full/obj16/ant.gif"
             category="org.eclipse.ui.externaltools"
-            helpContextId="org.eclipse.ui.externaltools.launchShortcutHelpContext.antShortcutWithDialog"
             class="org.eclipse.ant.internal.ui.launchConfigurations.AntLaunchShortcutWithDialog"
-            modes="run, debug"
-            id="org.eclipse.ant.ui.antShortcutWithDialog">
+            description="%AntBuild...Shortcut.description"
+            helpContextId="org.eclipse.ui.externaltools.launchShortcutHelpContext.antShortcutWithDialog"
+            icon="$nl$/icons/full/obj16/ant.gif"
+            id="org.eclipse.ant.ui.antShortcutWithDialog"
+            label="%AntLaunchShortcutWithDialog.label"
+            modes="run, debug">
         <contextualLaunch>
            <enablement>
              <with variable="selection">
