Fix for Bug 270596 - [UI] Need to support trim

--- a/bundles/org.eclipse.e4.ui.workbench.renderers.swt/plugin.xml
+++ b/bundles/org.eclipse.e4.ui.workbench.renderers.swt/plugin.xml
@@ -31,5 +31,11 @@
             class="org.eclipse.e4.workbench.ui.renderers.swt.StackModelFactory">
       </factory>
    </extension>
+   <extension
+         point="org.eclipse.e4.workbench.partfactory">
+      <factory
+            class="org.eclipse.e4.workbench.ui.renderers.swt.TrimPartFactory">
+      </factory>
+   </extension>
 
 </plugin>
