Fixes Bug 199499 - Switching tabs by Ctrl+PageUp/PageDown must not be caught on the inner tab set

--- a/bundles/org.eclipse.ui/plugin.properties
+++ b/bundles/org.eclipse.ui/plugin.properties
@@ -186,6 +186,8 @@ command.nextPage.name = Next Page
 command.nextPage.description = Switch to the next page
 command.nextPerspective.description = Switch to the next perspective
 command.nextPerspective.name = Next Perspective
+command.nextSubTab.name = Next Sub-Tab
+command.nextSubTab.description = Switch to the next sub-tab
 command.nextView.description = Switch to the next view
 command.nextView.name = Next View
 command.openEditorDropDown.description = Open the editor drop down list
@@ -205,6 +207,8 @@ command.previousPage.name = Previous Page
 command.previousPage.description = Switch to the previous page
 command.previousPerspective.description = Switch to the previous perspective
 command.previousPerspective.name = Previous Perspective
+command.previousSubTab.name = Previous Sub-Tab
+command.previousSubTab.description = Switch to the previous sub-tab
 command.previousView.description = Switch to the previous view
 command.previousView.name = Previous View
 command.print.description = Print
