--- a/org.eclipse.ui.editors/src/org/eclipse/ui/internal/editors/text/TextEditorMessages.properties
+++ b/org.eclipse.ui.editors/src/org/eclipse/ui/internal/editors/text/TextEditorMessages.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2008 IBM Corporation and others.
+# Copyright (c) 2000, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -72,6 +72,7 @@ AnnotationsConfigurationBlock_showInText=&Text as
 AnnotationsConfigurationBlock_DASHED_BOX=Dashed Box
 AnnotationsConfigurationBlock_showInOverviewRuler=&Overview ruler
 AnnotationsConfigurationBlock_showInVerticalRuler=&Vertical ruler
+AnnotationsConfigurationBlock_isNavigationTarget=&Include in next/previous navigation
 AnnotationsConfigurationBlock_annotationPresentationOptions=Annotation ty&pes:
 AnnotationsConfigurationBlock_SQUIGGLES=Squiggly Line
 AnnotationsConfigurationBlock_PROBLEM_UNDERLINE=Native Problem Underline
