Bug 266812 - additional update

--- a/tests/org.eclipse.team.tests.cvs.core/build.properties
+++ b/tests/org.eclipse.team.tests.cvs.core/build.properties
@@ -15,6 +15,7 @@ bin.includes = about.html,\
                test.xml,\
                repository.properties,\
                resources/,\
+               patchdata/,\
                icons/,\
                META-INF/
 src.includes = resources/
