Bug 263090 [legacy] Load the model with commands and handlers Bug 271331 [Compatibility] Fill in the main menu with menu contributions Bug 271332 [Compatibility] Fill in the main menu with action sets

--- a/bundles/org.eclipse.e4.ui.services/plugin.xml
+++ b/bundles/org.eclipse.e4.ui.services/plugin.xml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.2"?>
 <plugin>
+   <extension
+         point="org.eclipse.e4.services">
+      <servicefactory
+            class="org.eclipse.e4.ui.internal.services.HandlerContextFunction">
+         <service
+               api="org.eclipse.e4.ui.services.EHandlerService">
+         </service>
+      </servicefactory>
+   </extension>
 
 </plugin>
