bug 271588: Pasting using block selection mode logs error

--- a/org.eclipse.jface.text/src/org/eclipse/jface/text/JFaceTextMessages.properties
+++ b/org.eclipse.jface.text/src/org/eclipse/jface/text/JFaceTextMessages.properties
@@ -17,6 +17,8 @@ TextViewer.error.bad_location.getBottomIndexEndOffset= TextViewer.getBottomIndex
 TextViewer.error.bad_location.getFirstCompleteLineOfRegion= TextViewer.getFirstCompleteLineOfRegion: BadLocationException
 TextViewer.error.bad_location.getTopIndex= TextViewer.getTopIndex: BadLocationException
 TextViewer.error.bad_location.getTopIndexStartOffset= TextViewer.getTopIndexStartOffset: BadLocationException
+TextViewer.error.bad_location.paste= TextViewer.paste: BadLocationException
+TextViewer.error.bad_location.delete= TextViewer.delete: BadLocationException
 TextViewer.error.bad_location.selectContentTypePlugin= TextViewer.selectContentTypePlugin: BadLocationException
 TextViewer.error.bad_location.setTopIndex_1= TextViewer.setTopIndex: BadLocationException
 TextViewer.error.bad_location.setTopIndex_2= TextViewer.setTopIndex: BadLocationException
