bug 220457: Take multiple content-types into account

--- a/bundles/org.eclipse.compare/plugins/org.eclipse.compare/compare/org/eclipse/compare/internal/CompareMessages.properties
+++ b/bundles/org.eclipse.compare/plugins/org.eclipse.compare/compare/org/eclipse/compare/internal/CompareMessages.properties
@@ -143,5 +143,8 @@ CompareWithOtherResourceDialog_workspaceRadioButton=&Workspace
 CompareContentViewerSwitchingPane_defaultViewer=Default Compare
 CompareContentViewerSwitchingPane_switchButtonTooltip=Switch Compare Viewer
 CompareContentViewerSwitchingPane_discoveredLabel={0} Compare
+CompareStructureViewerSwitchingPane_defaultViewer=Default Structure Compare
+CompareStructureViewerSwitchingPane_switchButtonTooltip=Switch Structure Compare Viewer
+CompareStructureViewerSwitchingPane_discoveredLabel={0} Structure Compare
 
 ReaderCreator_fileIsNotAccessible=Cannot create a reader because the file is inaccessible.
