Bug 272732 [Compatibility] Context are needed for key bindings This will at least provide the ContextManager, although probably not with many contexts active

--- a/bundles/org.eclipse.e4.ui.services/plugin.xml
+++ b/bundles/org.eclipse.e4.ui.services/plugin.xml
@@ -9,6 +9,12 @@
                api="org.eclipse.e4.ui.services.EHandlerService">
          </service>
       </servicefactory>
+      <servicefactory
+            class="org.eclipse.e4.ui.internal.services.ContextContextFunction">
+         <service
+               api="org.eclipse.e4.ui.services.EContextService">
+         </service>
+      </servicefactory>
    </extension>
 
 </plugin>
