Bug 268978 Build before launch should use one top level workspace runnable

--- a/org.eclipse.debug.core/core/org/eclipse/debug/internal/core/DebugCoreMessages.properties
+++ b/org.eclipse.debug.core/core/org/eclipse/debug/internal/core/DebugCoreMessages.properties
@@ -47,6 +47,7 @@ LaunchConfiguration_18=Invalid launch configuration memento: missing path attrib
 LaunchConfiguration_19=Invalid launch configuration memento: missing local attribute
 LaunchConfigurationDelegate_6=Searching for errors
 LaunchConfigurationDelegate_7=Searching for errors in {0}
+LaunchConfigurationDelegate_scoped_incremental_build=Scoped incremental build before launch...
 LaunchConfigurationInfo_Attribute__0__is_not_of_type_boolean__3=Attribute {0} is not of type boolean.
 LaunchConfigurationInfo_Attribute__0__is_not_of_type_int__2=Attribute {0} is not of type int.
 LaunchConfigurationInfo_Attribute__0__is_not_of_type_java_lang_String__1=Attribute {0} is not of type java.lang.String.
