--- a/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/actions/breakpointGroups/BreakpointGroupMessages.properties
+++ b/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/actions/breakpointGroups/BreakpointGroupMessages.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2004, 2007 IBM Corporation and others.
+# Copyright (c) 2004, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -9,8 +9,8 @@
 #     IBM Corporation - initial API and implementation
 ###############################################################################
 
-GroupBreakpointsByAction_0=&Breakpoints
-GroupBreakpointsByAction_1=&Advanced...
+GroupBreakpointsByAction_0=Breakpoints
+GroupBreakpointsByAction_1=Advanced...
 GroupBreakpointsByDialog_0=Specify nested groupings for the Breakpoints view.
 GroupBreakpointsByDialog_1=A&vailable Groups:
 GroupBreakpointsByDialog_2=&Add -->
