Bug 273266 - Non-externalized string in org.eclipse.compare.win32/plugin.xml

--- a/bundles/org.eclipse.compare/plugins/org.eclipse.compare.win32/plugin.xml
+++ b/bundles/org.eclipse.compare/plugins/org.eclipse.compare.win32/plugin.xml
@@ -19,7 +19,7 @@
       <content-type
             file-extensions="doc"
             id="org.eclipse.compare.wordDoc"
-            name="Word Document">
+            name="%wordDocumentContentTypeName">
       </content-type>
    </extension>
 
