--- a/bundles/org.eclipse.compare/plugins/org.eclipse.compare.win32/build.properties
+++ b/bundles/org.eclipse.compare/plugins/org.eclipse.compare.win32/build.properties
@@ -4,5 +4,6 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                icons/,\
-               about.html
+               about.html,\
+               plugin.properties
 src.includes = about.html
