--- a/org.eclipse.ui.intro.universal/themes/purpleMesh/swt/standby.properties
+++ b/org.eclipse.ui.intro.universal/themes/purpleMesh/swt/standby.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-#  Copyright (c) 2005, 2007 IBM Corporation and others.
+#  Copyright (c) 2005, 2009 IBM Corporation and others.
 #  All rights reserved. This program and the accompanying materials
 #  are made available under the terms of the Eclipse Public License v1.0
 #  which accompanies this distribution, and is available at
@@ -14,6 +14,7 @@ standby.links-background.page-links.tutorials.link-icon = ../graphics/icons/etoo
 standby.links-background.page-links.samples.link-icon= ../graphics/icons/etool/samples72.gif
 standby.links-background.page-links.whatsnew.link-icon = ../graphics/icons/etool/whatsnew72.gif
 standby.links-background.page-links.firststeps.link-icon = ../graphics/icons/etool/firsteps72.gif
+standby.links-background.page-links.migrate.link-icon = ../graphics/icons/etool/migrate72.gif
 standby.links-background.page-links.webresources.link-icon = ../graphics/icons/etool/webrsrc72.gif
 standby.action-links.workbench.link-icon = ../graphics/icons/etool/wb48.gif
 
@@ -21,8 +22,9 @@ standby.links-background.page-links.overview.hover-icon = ../graphics/icons/ctoo
 standby.links-background.page-links.tutorials.hover-icon = ../graphics/icons/ctool/tutorials72.gif
 standby.links-background.page-links.samples.hover-icon = ../graphics/icons/ctool/samples72.gif
 standby.links-background.page-links.whatsnew.hover-icon = ../graphics/icons/ctool/whatsnew72.gif
-standby.links-background.page-links.firststeps.link-icon = ../graphics/icons/ctool/firsteps72.gif
-standby.links-background.page-links.webresources.link-icon = ../graphics/icons/ctool/webrsrc72.gif
+standby.links-background.page-links.migrate.hover-icon = ../graphics/icons/ctool/migrate72.gif
+standby.links-background.page-links.firststeps.hover-icon = ../graphics/icons/ctool/firsteps72.gif
+standby.links-background.page-links.webresources.hover-icon = ../graphics/icons/ctool/webrsrc72.gif
 standby.action-links.workbench.hover-icon = ../graphics/icons/ctool/wb48.gif
 
 standby.links-background.page-links.layout.vspacing = 30
