--- a/org.eclipse.ui.intro.universal/themes/purpleMesh/swt/firststeps.properties
+++ b/org.eclipse.ui.intro.universal/themes/purpleMesh/swt/firststeps.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2005, 2006 IBM Corporation and others.
+# Copyright (c) 2005, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -12,4 +12,4 @@ firststeps.page-content.layout.ncolumns = 2
 firststeps.page-content.page-title.layout.colspan = 2
 firststeps.page-content.page-description.layout.colspan = 2
 firststeps.page-content.content-divider.layout.colspan = 2
-firstseps.subtitle-id = firststeps/page-content/page-title
+firststeps.subtitle-id = firststeps/page-content/page-title
