--- a/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/views/launch/LaunchViewMessages.properties
+++ b/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/views/launch/LaunchViewMessages.properties
@@ -11,17 +11,17 @@
 ###############################################################################
 
 Breadcrumb_NoActiveContext=No Active Context
-LaunchView_ViewModeMenu_label=View Mode
-DebugViewModeAction_Auto_label=Automatic
+LaunchView_ViewModeMenu_label=View &Mode
+DebugViewModeAction_Auto_label=&Automatic
 DebugViewModeAction_Auto_tooltip=Automatic
 DebugViewModeAction_Auto_description=Switch view mode automatically when the view is resized
-DebugViewModeAction_Full_label=Full
+DebugViewModeAction_Full_label=&Full
 DebugViewModeAction_Full_tooltip=Full
 DebugViewModeAction_Full_description=Always show the full viewer
-DebugViewModeAction_Compact_label=Compact
+DebugViewModeAction_Compact_label=&Compact
 DebugViewModeAction_Compact_tooltip=Compact
 DebugViewModeAction_Compact_description=Always show the compact viewer
 
-BreadcrumbDropDownAutoExpandAction_label=Auto-Expand Compact Selector
+BreadcrumbDropDownAutoExpandAction_label=Auto-&Expand Compact Selector
 BreadcrumbDropDownAutoExpandAction_tooltip=Auto-Expand Compact Selector
 BreadcrumbDropDownAutoExpandAction_description=In the compact mode selection viewer, automatically expand elements to reveal full selection in view.
