Fix for Bug 223843 [RCP] Session tests to confirm Advisor threading

--- a/tests/org.eclipse.ui.tests/plugin.xml
+++ b/tests/org.eclipse.ui.tests/plugin.xml
@@ -4184,4 +4184,9 @@
             </state>
          </command>
       </extension>
-</plugin>            
+   <extension id="rcpSessionApplication" point="org.eclipse.core.runtime.applications">
+	   <application cardinality="singleton-global" thread="main" visible="true">
+	      <run class="org.eclipse.ui.tests.RCPSessionApplication"> </run>
+	   </application>
+   </extension>
+</plugin>
