Add content producer test

--- a/org.eclipse.ua.tests/plugin.xml
+++ b/org.eclipse.ua.tests/plugin.xml
@@ -477,5 +477,11 @@
             filter="(other.info=org.eclipse.help)">
       </serviceSelector>
    </extension>
+   <extension
+         point="org.eclipse.help.contentProducer">
+      <contentProducer
+            producer="org.eclipse.ua.tests.util.UATestContentProducer">
+      </contentProducer>
+   </extension>
 
 </plugin>
