Fixed bug 29224: [misc] Supply more information when file is delete from workspace

--- a/org.eclipse.ui.workbench.texteditor/src/org/eclipse/ui/texteditor/EditorMessages.properties
+++ b/org.eclipse.ui.workbench.texteditor/src/org/eclipse/ui/texteditor/EditorMessages.properties
@@ -26,17 +26,17 @@ Editor_error_save_outofsync_title=Update conflict
 Editor_error_save_outofsync_message=The file ''{0}'' has been changed on the file system. Do you want to overwrite the changes made on the file system?
 
 Editor_error_activated_outofsync_title=File Changed
-Editor_error_activated_outofsync_message=The file has been changed on the file system. Do you want to replace the editor contents with these changes?
+Editor_error_activated_outofsync_message=The file ''{0}'' has been changed on the file system. Do you want to replace the editor contents with these changes?
 
 Editor_error_activated_deleted_save_title=File Not Accessible
-Editor_error_activated_deleted_save_message=The file has been deleted or is not accessible. Do you want to save your changes or close the editor without saving?
+Editor_error_activated_deleted_save_message=The file ''{0}'' has been deleted or is not accessible. Do you want to save your changes or close the editor without saving?
 Editor_error_activated_deleted_save_button_save=Save
 Editor_error_activated_deleted_save_button_close=Close
 Editor_error_activated_deleted_close_title=File Not Accessible
-Editor_error_activated_deleted_close_message=The file has been deleted or is not accessible. This editor will be closed.
+Editor_error_activated_deleted_close_message=The file ''{0}'' has been deleted or is not accessible. This editor will be closed.
 
 Editor_error_refresh_outofsync_title=Problems loading File
-Editor_error_refresh_outofsync_message=The file could not be loaded from the file system.
+Editor_error_refresh_outofsync_message=The file ''{0}'' could not be loaded from the file system.
 
 Editor_error_revert_title=Problems while reverting to saved state
 Editor_error_revert_message=Could not revert to saved state.
